--- a/searchandsortusingrecurrsion.ipynb
+++ b/searchandsortusingrecurrsion.ipynb
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Binary search not possible\n"
+      "False\n"
      ]
     }
    ],
@@ -65,7 +65,63 @@
     "         return sub_binary_search(start,end)\n",
     "    return sub_binary_search(start=0,end=len(arr)-1)\n",
     "\n",
-    "print(binary_search([1, 2, 3, 4, 5, 6, 7,2], 17))  "
+    "print(binary_search([1, 2, 3, 4, 5, 6, 7], -1))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1, 0, 1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Merge sort using recursion\n",
+    "\n",
+    "def merge_sort(arr):\n",
+    "    if len(arr)>1:\n",
+    "        left_arr = arr[:(len(arr)//2)]\n",
+    "        right_arr = arr[len(arr)//2:]\n",
+    "        merge_sort(left_arr)\n",
+    "        merge_sort(right_arr)\n",
+    "        \n",
+    "   \n",
+    "        i=0\n",
+    "        m=len(left_arr)\n",
+    "        j=0\n",
+    "        n=len(right_arr)\n",
+    "        k=0\n",
+    "        while i<m and j<n:\n",
+    "           if left_arr[i]<right_arr[j]:\n",
+    "              arr[k]=left_arr[i]\n",
+    "              i=i+1\n",
+    "              k=k+1\n",
+    "           elif left_arr[i]>right_arr[j]:\n",
+    "            arr[k]=right_arr[j]\n",
+    "            j=j+1\n",
+    "            k=k+1\n",
+    "        while i<len(left_arr):\n",
+    "             arr[k]=left_arr[i]\n",
+    "             i=i+1\n",
+    "             k=k+1\n",
+    "        while j<len(right_arr):\n",
+    "               arr[k]=right_arr[j]\n",
+    "               j=j+1\n",
+    "               k=k+1\n",
+    "\n",
+    "    return arr \n",
+    "\n",
+    "arr = [3, 0, 2, 5, -1, 4, 1]\n",
+    "merge_sort(arr)"
    ]
   },
   {
@@ -73,7 +129,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def merge_sort(arr):\n",
+    "    if len(arr) <= 1:\n",
+    "        return arr\n",
+    "    mid = len(arr) // 2\n",
+    "    left_half = merge_sort(arr[:mid])\n",
+    "    right_half = merge_sort(arr[mid:])\n",
+    "    return merge(left_half, right_half)\n",
+    " \n",
+    "def merge(left, right):\n",
+    "    sorted_list = []\n",
+    "    i = j = 0\n",
+    "    while i < len(left) and j < len(right):\n",
+    "        if left[i] < right[j]:\n",
+    "            sorted_list.append(left[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            sorted_list.append(right[j])\n",
+    "            j += 1\n",
+    "    while i < len(left):\n",
+    "        sorted_list.append(left[i])\n",
+    "        i += 1\n",
+    "    while j < len(right):\n",
+    "        sorted_list.append(right[j])\n",
+    "        j += 1\n",
+    " \n",
+    "    return sorted_list\n"
+   ]
   }
  ],
  "metadata": {
