--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -104,6 +104,151 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['jmp', 'jmq', 'jmr', 'jms', 'jnp', 'jnq', 'jnr', 'jns', 'jop', 'joq', 'jor', 'jos', 'kmp', 'kmq', 'kmr', 'kms', 'knp', 'knq', 'knr', 'kns', 'kop', 'koq', 'kor', 'kos', 'lmp', 'lmq', 'lmr', 'lms', 'lnp', 'lnq', 'lnr', 'lns', 'lop', 'loq', 'lor', 'los']\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Letter combinations of a phone number\n",
+    "keys = {'1':'','2':'abc','3':'def','4':'ghi','5':'jkl','6':'mno','7':'pqrs','8':'tuv','9':'wxyz'}\n",
+    "def return_combinations(digit):\n",
+    "        ans =[]\n",
+    "        if digit ==\"\":\n",
+    "             return ['']\n",
+    "    \n",
+    "        digits = digit[1:]\n",
+    "        digit_combination = return_combinations(digits)\n",
+    "        keyLetters = keys[digit[0]]\n",
+    "        for i in keyLetters:\n",
+    "            for j in digit_combination:\n",
+    "                ans.append(i+j)\n",
+    "        return ans\n",
+    "class Solution:\n",
+    "    def letterCombinations(d):\n",
+    "        \n",
+    "        if d ==\"\":\n",
+    "             return []\n",
+    "        return return_combinations(d)\n",
+    "    print(letterCombinations(\"567\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 2, 5, 6]\n",
+      "[1, 2, 2, 3, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Merge sorted array\n",
+    "\n",
+    "class Solution:\n",
+    "    def merge_array(self,num1,num2,m,n):\n",
+    "        i=0\n",
+    "        while i<n:\n",
+    "            k=num2[i]\n",
+    "            num1[m]=k\n",
+    "            i=i+1\n",
+    "            m=m+1\n",
+    "        print(num1)\n",
+    "        l=sorted(num1)\n",
+    "        print(l)\n",
+    "        \n",
+    "            \n",
+    "\n",
+    "num1=[1,2,3,0,0,0]\n",
+    "num2=[2,5,6]\n",
+    "m=3\n",
+    "n=3\n",
+    "s=Solution()\n",
+    "s.merge_array(num1,num2,m,n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Remove Element\n",
+    "\n",
+    "def remove_element(nums,val):\n",
+    "    if len(nums)==0:\n",
+    "        return []\n",
+    "    s=0\n",
+    "    e=len(nums)-1\n",
+    "    while s<=e:\n",
+    "        if nums[s]==val:\n",
+    "            del nums[s]\n",
+    "            e=e-1\n",
+    "        else:\n",
+    "            s=s+1\n",
+    "    return len(nums)\n",
+    "remove_element([0,1,2,2,3,2,4,2],2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums[:] = [x for x in nums if x != val]  # Modify `nums` in place\n",
+    "    return len(nums) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Remove Duplicates from Sorted Array\n",
+    "\n",
+    "def remove_duplicates(nums):\n",
+    "    n=list(set(nums))\n",
+    "    return len(n)\n",
+    "remove_duplicates([0,1,2,2,3,2,4,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
