--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -224,27 +224,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst =[1,2,3,4,5,6]\n",
+    "del lst[1]\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### Remove Duplicates from Sorted Array\n",
+    "def remove_duplicates(nums):\n",
+    "    n = []\n",
+    "    for i in range(len(nums)):\n",
+    "        if nums[i] not in n:\n",
+    "            n.append(nums[i])\n",
+    "    return n\n",
+    "\n",
+    "print(remove_duplicates([0,0,1,1,1,2,2,3,3,4]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "3"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## Remove Duplicates from Sorted Array\n",
+    "## Majority Element\n",
     "\n",
-    "def remove_duplicates(nums):\n",
-    "    n=list(set(nums))\n",
-    "    return len(n)\n",
-    "remove_duplicates([0,1,2,2,3,2,4,2])"
+    "def majorityElement(nums):\n",
+    "    global_count =0\n",
+    "    val=0\n",
+    "    for i in range(len(nums)):\n",
+    "        #print(\"Iteration : \",i)\n",
+    "        initial_count = nums.count(nums[i])\n",
+    "        #print(\"Initial count : \",initial_count)\n",
+    "        if initial_count>=global_count:\n",
+    "            global_count = initial_count\n",
+    "            #print(\"Global count : \",global_count)\n",
+    "            val=nums[i]\n",
+    "            #print(\"Val :\",val)\n",
+    "    return val\n",
+    "\n",
+    "majorityElement(nums=[3,2,3])"
    ]
   },
   {
