--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -304,6 +304,123 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Length of last word\n",
+    "\n",
+    "def lengthOfLastWord(s):\n",
+    "    \n",
+    "    lst = str.split(str.strip(s),' ')\n",
+    "    return len(lst[-1])\n",
+    "lengthOfLastWord(\"   Hi hello how are you?   \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Find the Index of the First Occurrence in a String\n",
+    "def strStr(haystack,needle):\n",
+    "    if needle in haystack:\n",
+    "        return haystack.find(needle)\n",
+    "    return -1\n",
+    "strStr(\"sadbutsad\",\"sad\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Valid Palindrome\n",
+    "\n",
+    "def isPalindrome(s):\n",
+    "    lst=[str.lower(i) for i in s if i.isalnum()]\n",
+    "    if lst == lst[::-1]:\n",
+    "        return True\n",
+    "    return False\n",
+    "isPalindrome(\"Marge, let's \\\"[went].\\\" I await {news} telegram.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Is Subsequence\n",
+    "\n",
+    "def isSubsequence(s,t):\n",
+    "    lst=[n for n in s]\n",
+    "    lst1=[m for m in t]\n",
+    "    i=0\n",
+    "    j=0\n",
+    "    while i<len(lst) and j<len(lst1):\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    for i in range(len(lst)):\n",
+    "        for j in range(len(lst1)-1,-1,-1):\n",
+    "            if lst1[j]!=lst[i]:\n",
+    "                del lst1[j]\n",
+    "                j=j-1\n",
+    "    \n",
+    "    #print(lst)\n",
+    "    print(lst1)\n",
+    "isSubsequence(\"abc\",\"ahbgdc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
