--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -382,41 +382,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['g', 'r', 'm', 'a', 'n']\n",
+      "['g', 'r', 'm', 'a', 'n']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "## Is Subsequence\n",
+    "## Valid Anagram\n",
     "\n",
-    "def isSubsequence(s,t):\n",
-    "    lst=[n for n in s]\n",
-    "    lst1=[m for m in t]\n",
-    "    i=0\n",
-    "    j=0\n",
-    "    while i<len(lst) and j<len(lst1):\n",
-    "        \n",
+    "def isAnagram(s,t):\n",
+    "    l1=list(set(s))\n",
+    "    l2=list(set(t))\n",
+    "    if l1==l2:\n",
+    "        return True\n",
+    "    return False\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    for i in range(len(lst)):\n",
-    "        for j in range(len(lst1)-1,-1,-1):\n",
-    "            if lst1[j]!=lst[i]:\n",
-    "                del lst1[j]\n",
-    "                j=j-1\n",
-    "    \n",
-    "    #print(lst)\n",
-    "    print(lst1)\n",
-    "isSubsequence(\"abc\",\"ahbgdc\")"
+    "isAnagram(\"anagram\",\"nagaram\")"
    ]
   },
   {
