--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -382,15 +382,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['g', 'r', 'm', 'a', 'n']\n",
-      "['g', 'r', 'm', 'a', 'n']\n"
+      "['a', 'a', 'c', 'c']\n",
+      "['a', 'c', 'c', 'c']\n"
      ]
     },
     {
@@ -399,7 +399,7 @@
        "False"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,13 +408,292 @@
     "## Valid Anagram\n",
     "\n",
     "def isAnagram(s,t):\n",
-    "    l1=list(set(s))\n",
-    "    l2=list(set(t))\n",
-    "    if l1==l2:\n",
-    "        return True\n",
+    "    if len(s)==len(t):\n",
+    "        \n",
+    "       l1=sorted(s)\n",
+    "       print(l1)\n",
+    "       l2=sorted(t)\n",
+    "       print(l2)\n",
+    "       if l1==l2:\n",
+    "           return True\n",
+    "    \n",
     "    return False\n",
     "    \n",
-    "isAnagram(\"anagram\",\"nagaram\")"
+    "isAnagram(\"aacc\",\"ccac\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Valid pattern\n",
+    "\n",
+    "def wordPattern(pattern, s):\n",
+    "    l1=set(pattern)\n",
+    "    l2=set(str.split(s,\" \"))\n",
+    "    if len(l1)==len(l2):\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "wordPattern(\"aab\",\"cat cat cat dog\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 0]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Plus one\n",
+    "\n",
+    "def plusOne(digits):\n",
+    "    n=str()\n",
+    "    for i in digits:\n",
+    "        n=n+str(i)\n",
+    "    no = str(int(n)+1)\n",
+    "    return [int(i) for i in no]\n",
+    "plusOne([9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=1234\n",
+    "type(l)\n",
+    "lst=[]\n",
+    "for i in str(l):\n",
+    "    lst.append(int(i))\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[64], line 13\u001b[0m\n\u001b[0;32m      9\u001b[0m                      \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m \u001b[43msearchMatrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[64], line 6\u001b[0m, in \u001b[0;36msearchMatrix\u001b[1;34m(matrix, target)\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,\u001b[38;5;28mlen\u001b[39m(matrix)):\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(matrix),\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m----> 6\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m target\u001b[38;5;241m>\u001b[39m \u001b[43mmatrix\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m:\n\u001b[0;32m      7\u001b[0m                  \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m      8\u001b[0m             \u001b[38;5;28;01melif\u001b[39;00m target\u001b[38;5;241m==\u001b[39mmatrix[i][j]:\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "## Search a 2D Matrix\n",
+    "\n",
+    "def searchMatrix(matrix,target):\n",
+    "    for i in range(0,len(matrix)):\n",
+    "        for j in range(len(matrix),-1,-1):\n",
+    "                if target> matrix[i][j]:\n",
+    "                     continue\n",
+    "                elif target==matrix[i][j]:\n",
+    "                     return True\n",
+    "    return False\n",
+    "                     \n",
+    "\n",
+    "searchMatrix([[1,3],[4,5]],6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def searchMatrix(self, matrix: List[List[int]], target: int) -> bool:\n",
+    "        for i in range(0,len(matrix)):\n",
+    "             for j in range(len(matrix),-1,-1):\n",
+    "                if target> matrix[i][j]:\n",
+    "                     continue\n",
+    "                elif target==matrix[i][j]:\n",
+    "                     return True\n",
+    "        return False\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 2, 3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Remove Duplicates from Sorted Array II\n",
+    "\n",
+    "def removeDuplicates(nums):\n",
+    "    e=len(nums)\n",
+    "    count =0\n",
+    "    for i in range(e-1,-1,-1):\n",
+    "        if i==e-1:\n",
+    "            if nums[i]==nums[i-1]:\n",
+    "                \n",
+    "                #print(\"Nums[i] = \",nums[i])\n",
+    "                count = count+1\n",
+    "                #print(\"Count = \",count)\n",
+    "        else:\n",
+    "            if nums[i]==nums[i-1] or nums[i]==nums[i+1]:\n",
+    "                count = count+1\n",
+    "                #print(\"Count = \",count)\n",
+    "\n",
+    "        if count >2:\n",
+    "            del nums[i]\n",
+    "            count =0\n",
+    "            e=e-1\n",
+    "    print(nums)\n",
+    "    return len(nums)\n",
+    "\n",
+    "removeDuplicates([1,1,1,2,2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 6, 7, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst=[1,2,3,4,5,6,7]\n",
+    "n=0\n",
+    "for i in range(n,4):\n",
+    "    lst.append(lst[n])\n",
+    "    del lst[0]\n",
+    "    \n",
+    "\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'example good a'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Reverse Words in a String\n",
+    "\n",
+    "def reverseWords(s):\n",
+    "    \n",
+    "    lst = str.split(s)\n",
+    "    string =str()\n",
+    "    for i in range(len(lst)-1,-1,-1):\n",
+    "        string = string+\" \"+(lst[i])\n",
+    "    return str.strip(string)\n",
+    "    \n",
+    "reverseWords(\"a good  example\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modified nums :  [2, 3, 4, 5, 6, 7, 1]\n",
+      "Modified nums :  [3, 4, 5, 6, 7, 1, 2]\n",
+      "Modified nums :  [4, 5, 6, 7, 1, 2, 3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[4, 5, 6, 7, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Rotate Array\n",
+    "\n",
+    "def rotate(nums,k):\n",
+    "    n=0\n",
+    "    for i in range(n,k):\n",
+    "        nums.append(nums[n])\n",
+    "        del nums[0]\n",
+    "        print(\"Modified nums : \",nums)\n",
+    "    return nums\n",
+    "rotate([1,2,3,4,5,6,7],3)"
    ]
   },
   {
