--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -660,25 +660,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modified nums :  [2, 3, 4, 5, 6, 7, 1]\n",
-      "Modified nums :  [3, 4, 5, 6, 7, 1, 2]\n",
-      "Modified nums :  [4, 5, 6, 7, 1, 2, 3]\n"
+      "Modified nums :  [7, 1, 2, 3, 4, 5, 6]\n",
+      "Modified nums :  [6, 7, 1, 2, 3, 4, 5]\n",
+      "Modified nums :  [5, 6, 7, 1, 2, 3, 4]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[4, 5, 6, 7, 1, 2, 3]"
+       "[5, 6, 7, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,13 +687,58 @@
     "## Rotate Array\n",
     "\n",
     "def rotate(nums,k):\n",
+    "    \n",
+    "    for i in range(len(nums)-1,k,-1):\n",
+    "        #print(\"N = \",n)\n",
+    "        nums.insert(0,nums[-1])\n",
+    "        del nums[-1]\n",
+    "        print(\"Modified nums : \",nums)\n",
+    "    return nums\n",
+    "rotate([1,2,3,4,5,6,7],3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rotate(nums,k):\n",
     "    n=0\n",
     "    for i in range(n,k):\n",
-    "        nums.append(nums[n])\n",
+    "        list.insert\n",
     "        del nums[0]\n",
     "        print(\"Modified nums : \",nums)\n",
     "    return nums\n",
     "rotate([1,2,3,4,5,6,7],3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "descriptor 'index' for 'list' objects doesn't apply to a 'int' object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m     lst_min \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m\u001b[38;5;241m.\u001b[39mindex(\u001b[38;5;28mmin\u001b[39m(prices))\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(lst_min)\n\u001b[1;32m----> 7\u001b[0m \u001b[43mmaxProfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[23], line 4\u001b[0m, in \u001b[0;36mmaxProfit\u001b[1;34m(prices)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmaxProfit\u001b[39m(prices):\n\u001b[1;32m----> 4\u001b[0m     lst_min \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mmin\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprices\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(lst_min)\n",
+      "\u001b[1;31mTypeError\u001b[0m: descriptor 'index' for 'list' objects doesn't apply to a 'int' object"
+     ]
+    }
+   ],
+   "source": [
+    "## Best Time to Buy and Sell Stock\n",
+    "\n",
+    "def maxProfit(prices):\n",
+    "    lst_min = list.index(min(prices))\n",
+    "    print(lst_min)\n",
+    "\n",
+    "maxProfit([7,1,5,3,6,4])"
    ]
   },
   {
