--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -715,30 +715,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "descriptor 'index' for 'list' objects doesn't apply to a 'int' object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m     lst_min \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m\u001b[38;5;241m.\u001b[39mindex(\u001b[38;5;28mmin\u001b[39m(prices))\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(lst_min)\n\u001b[1;32m----> 7\u001b[0m \u001b[43mmaxProfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[23], line 4\u001b[0m, in \u001b[0;36mmaxProfit\u001b[1;34m(prices)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmaxProfit\u001b[39m(prices):\n\u001b[1;32m----> 4\u001b[0m     lst_min \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mmin\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprices\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(lst_min)\n",
-      "\u001b[1;31mTypeError\u001b[0m: descriptor 'index' for 'list' objects doesn't apply to a 'int' object"
-     ]
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "## Best Time to Buy and Sell Stock\n",
     "\n",
     "def maxProfit(prices):\n",
-    "    lst_min = list.index(min(prices))\n",
-    "    print(lst_min)\n",
+    "    lst_min = prices.index(min(prices))\n",
+    "    lst_max =0\n",
+    "    max_val=min(prices)\n",
+    "    if lst_min == len(prices)-1:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        for i in range(lst_min,len(prices)):\n",
+    "            if prices[i]>max_val:\n",
+    "                max_value = prices[i]\n",
+    "                lst_max=prices.index(prices[i])\n",
+    "    return lst_max\n",
+    "    \n",
     "\n",
-    "maxProfit([7,1,5,3,6,4])"
+    "maxProfit([1,2,4])"
    ]
   },
   {
