--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -751,6 +751,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'z', 'a', 'b'}\n",
+      "a\n",
+      "z\n",
+      "[0, 4, 2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Is Subsequence\n",
+    "\n",
+    "def isSubsequence(x,t):\n",
+    "    s=set(x)\n",
+    "    print(set(t))\n",
+    "    lst =[ch for ch in t]\n",
+    "    id = []\n",
+    "    for i in s:\n",
+    "        print(i)\n",
+    "        for j in range(len(lst)):\n",
+    "            if i==lst[j] and :\n",
+    "                id.append(j)\n",
+    "    print(id)\n",
+    "    for n in range(len(id)-1,0,-1):\n",
+    "        if id[n]>id[n-1]:\n",
+    "            continue\n",
+    "        else:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "isSubsequence(\"aza\",\"abzba\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.26100\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Pow(x,N)\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "ans = math.pow(2.10000,3)\n",
+    "a = f\"{ans:.5f}\"\n",
+    "print(doubleint(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Palindrome Number\n",
+    "\n",
+    "def isPalindrome(x):\n",
+    "    n = str(x)\n",
+    "    lst = list(n)\n",
+    "    if lst == lst[::-1]:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "isPalindrome(101)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
