--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -715,42 +715,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## Best Time to Buy and Sell Stock\n",
-    "\n",
-    "def maxProfit(prices):\n",
-    "    lst_min = prices.index(min(prices))\n",
-    "    lst_max =0\n",
-    "    max_val=min(prices)\n",
-    "    if lst_min == len(prices)-1:\n",
-    "        return 0\n",
-    "    else:\n",
-    "        for i in range(lst_min,len(prices)):\n",
-    "            if prices[i]>max_val:\n",
-    "                max_value = prices[i]\n",
-    "                lst_max=prices.index(prices[i])\n",
-    "    return lst_max\n",
-    "    \n",
-    "\n",
-    "maxProfit([1,2,4])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -849,6 +813,108 @@
     "    return False\n",
     "\n",
     "isPalindrome(101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Best Time to Buy and Sell Stock\n",
+    "\n",
+    "def maxProfit(prices):\n",
+    "    lst_min = prices.index(min(prices))\n",
+    "    lst_max =0\n",
+    "    max_val=min(prices)\n",
+    "    if lst_min == len(prices)-1:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        for i in range(lst_min,len(prices)):\n",
+    "            if prices[i]>max_val:\n",
+    "                max_val = prices[i]\n",
+    "                lst_max=i\n",
+    "    return prices[lst_max]-prices[lst_min]\n",
+    "    \n",
+    "\n",
+    "maxProfit([2,4,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def maxProfit(prices):\n",
+    "    lst_min = prices.index(min(prices))\n",
+    "    lst_max = 0\n",
+    "    max_val = min(prices)\n",
+    "    if lst_min == len(prices) - 1:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        for i in range(lst_min, len(prices)):\n",
+    "            if prices[i] > max_val:\n",
+    "                max_val = prices[i]\n",
+    "                lst_max = i  # Use the current index `i` directly\n",
+    "    return prices[lst_max] - prices[lst_min]\n",
+    "\n",
+    "# Test cases\n",
+    "print(maxProfit([7, 1, 5, 3, 6, 4]))  # Output: 5\n",
+    "print(maxProfit([2, 4, 1]))           # Output: 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def maxProfit(prices):\n",
+    "    lst_min = 0\n",
+    "    max_profit = 0\n",
+    "\n",
+    "    for i in range(1, len(prices)):\n",
+    "        if prices[i] < prices[lst_min]:\n",
+    "            lst_min = i  # Update the minimum price index\n",
+    "        else:\n",
+    "            # Calculate profit if sold at the current price\n",
+    "            max_profit = max(max_profit, prices[i] - prices[lst_min])\n",
+    "\n",
+    "    return max_profit\n",
+    "\n",
+    "# Test cases\n",
+    "print(maxProfit([7, 1, 5, 3, 6, 4]))  # Output: 5\n",
+    "print(maxProfit([2, 4, 1]))           # Output: 2\n"
    ]
   },
   {
