--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -100,6 +100,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Val =  10\n",
+      "Val =  20\n",
+      "Val =  30\n",
+      "10\n",
+      "20\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "## taking input in linkedlist\n",
+    "\n",
+    "class SingleLinkedList:\n",
+    "    def __init__(self,val):\n",
+    "        self.data = val\n",
+    "        self.next = None\n",
+    "def display(head):\n",
+    "    while(head!=None):\n",
+    "        print(head.data)\n",
+    "        head=head.next\n",
+    "def ip():\n",
+    "    val = int(input())\n",
+    "    head = None\n",
+    "    while(val!=-1):\n",
+    "        print(\"Val = \",val)\n",
+    "        newList = SingleLinkedList(val)\n",
+    "        if(head == None):\n",
+    "            head = newList\n",
+    "        else:\n",
+    "            temp=head\n",
+    "            while(temp.next!=None):\n",
+    "                temp = temp.next\n",
+    "                \n",
+    "            temp.next = newList\n",
+    "        val = int(input())\n",
+    "    return head\n",
+    "\n",
+    "newHead = ip()\n",
+    "display(newHead)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
