--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -919,10 +919,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Search in rotated sorted array\n",
+    "\n",
+    "class Solution:\n",
+    "    def search(self, nums, target):\n",
+    "        s=0\n",
+    "        e=len(nums)-1\n",
+    "        while s<=e:\n",
+    "           if nums[s]==target:\n",
+    "               return s\n",
+    "           else:\n",
+    "               s=s+1\n",
+    "        return -1\n",
+    "s=Solution()    \n",
+    "s.search([4,5,6,7,0,1,2],0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def search(self, nums, target):\n",
+    "        s = 0\n",
+    "        e = len(nums) - 1\n",
+    "        \n",
+    "        while s <= e:\n",
+    "            mid = (s + e) // 2  \n",
+    "            \n",
+    "            if nums[mid] == target:\n",
+    "                return mid  \n",
+    "            if nums[s] <= nums[mid]:\n",
+    "                if nums[s] <= target < nums[mid]:  \n",
+    "                    e = mid - 1\n",
+    "                else:  \n",
+    "                    s = mid + 1\n",
+    "            \n",
+    "           \n",
+    "            else:\n",
+    "                if nums[mid] < target <= nums[e]:  \n",
+    "                    s = mid + 1\n",
+    "                else:  \n",
+    "                    e = mid - 1\n",
+    "        \n",
+    "        return -1  \n",
+    "\n",
+    "s = Solution()\n",
+    "print(s.search([4, 5, 6, 7, 0, 1, 2], 0))  # Output: 4\n"
+   ]
   }
  ],
  "metadata": {
