--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -145,11 +145,127 @@
     "    return head\n",
     "\n",
     "newHead = ip()\n",
-    "display(newHead)\n",
+    "display(newHead)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Val =  10\n",
+      "Val =  20\n",
+      "Val =  30\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Length of linked list\n",
+    "class SingleLinkedList:\n",
+    "    def __init__(self,val):\n",
+    "        self.data = val\n",
+    "        self.next = None\n",
+    "def length(head):\n",
+    "    count = 0\n",
+    "    while(head!=None):\n",
+    "        count = count+1\n",
+    "        head=head.next\n",
+    "    return count\n",
+    "def ip():\n",
+    "    val = int(input())\n",
+    "    head = None\n",
+    "    while(val!=-1):\n",
+    "        print(\"Val = \",val)\n",
+    "        newList = SingleLinkedList(val)\n",
+    "        if(head == None):\n",
+    "            head = newList\n",
+    "        else:\n",
+    "            temp=head\n",
+    "            while(temp.next!=None):\n",
+    "                temp = temp.next\n",
+    "                \n",
+    "            temp.next = newList\n",
+    "        val = int(input())\n",
+    "    return head\n",
     "\n",
+    "newHead = ip()\n",
+    "length(newHead)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 41\u001b[0m\n\u001b[0;32m     39\u001b[0m headAns \u001b[38;5;241m=\u001b[39m insert_at_head(\u001b[38;5;241m1000\u001b[39m,newHead)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m#pLL(ans)\u001b[39;00m\n\u001b[1;32m---> 41\u001b[0m tailAns \u001b[38;5;241m=\u001b[39m \u001b[43minsert_at_tail\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m100000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mheadAns\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[4], line 16\u001b[0m, in \u001b[0;36minsert_at_tail\u001b[1;34m(data, head)\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minsert_at_tail\u001b[39m(data,head):\n\u001b[0;32m     15\u001b[0m     tailNode \u001b[38;5;241m=\u001b[39m SLL(data)\n\u001b[1;32m---> 16\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m(head\u001b[38;5;241m!=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m     17\u001b[0m         head \u001b[38;5;241m=\u001b[39m head\u001b[38;5;241m.\u001b[39mnext\n\u001b[0;32m     18\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m(head\u001b[38;5;241m.\u001b[39mnext \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m):\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "class SLL:\n",
+    "    def __init__(self,val):\n",
+    "        self.d = val\n",
+    "        self.next = None\n",
+    "def pLL(head):\n",
+    "    while(head!=None):\n",
+    "        print(head.d,end=\"-->\")\n",
+    "        head=head.next\n",
+    "def insert_at_head(data,head):\n",
+    "    nnNode = SLL(data)\n",
+    "    nnNode.next = head\n",
+    "    head = nnNode\n",
+    "    return head\n",
+    "def insert_at_tail(data,head):\n",
+    "    tailNode = SLL(data)\n",
+    "    while(head!=None):\n",
+    "        head = head.next\n",
+    "        if(head.next == None):\n",
+    "            head.next = tailNode\n",
+    "    return head\n",
     "\n",
+    "def take_ip():\n",
+    "    val = int(input())\n",
+    "    head=None\n",
+    "    while(val!=-1):\n",
+    "        nNode = SLL(val)\n",
+    "        if (head == None):\n",
+    "            head = nNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while(temp.next!=None):\n",
+    "                temp = temp.next\n",
+    "            temp.next = nNode\n",
+    "        val = int(input())\n",
+    "    return head\n",
     "\n",
-    "\n"
+    "newHead = take_ip()\n",
+    "#pLL(newHead)\n",
+    "headAns = insert_at_head(1000,newHead)\n",
+    "#pLL(ans)\n",
+    "tailAns = insert_at_tail(100000,headAns)"
    ]
   },
   {
@@ -157,7 +273,112 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from common import SLL,pLL\n",
+    "\n",
+    "def insert_at_head(data,head):\n",
+    "    nnNode = SLL(data)\n",
+    "    nnNode.next = head\n",
+    "    head = nnNode\n",
+    "    return head\n",
+    "\n",
+    "ans = insert_at_head(1000,head)\n",
+    "pLL(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000-->10-->20-->30-->100000-->"
+     ]
+    }
+   ],
+   "source": [
+    "class SLL:\n",
+    "    def __init__(self,val):\n",
+    "        self.d = val\n",
+    "        self.next = None\n",
+    "def pLL(head):\n",
+    "    while(head!=None):\n",
+    "        print(head.d,end=\"-->\")\n",
+    "        head=head.next\n",
+    "def insert_at_head(data,head):\n",
+    "    nnNode = SLL(data)\n",
+    "    nnNode.next = head\n",
+    "    head = nnNode\n",
+    "    return head\n",
+    "def insert_at_tail(data,head):\n",
+    "    tailNode = SLL(data)\n",
+    "    if head==None:\n",
+    "        return tailNode\n",
+    "    else:\n",
+    "        temp = head\n",
+    "        while(temp.next!=None):\n",
+    "            temp = temp.next\n",
+    "        temp.next = tailNode\n",
+    "    return head\n",
+    "'''\n",
+    "def insert_at_tail(data,head):\n",
+    "    tailNode = SLL(data)\n",
+    "    if head is None:\n",
+    "        return tailNode\n",
+    "    temp = head \n",
+    "    while(temp.next!=None):\n",
+    "        temp = temp.next\n",
+    "    temp.next = tailNode\n",
+    "    return head\n",
+    "'''\n",
+    "def take_ip():\n",
+    "    val = int(input())\n",
+    "    head=None\n",
+    "    while(val!=-1):\n",
+    "        nNode = SLL(val)\n",
+    "        if (head == None):\n",
+    "            head = nNode\n",
+    "        else:\n",
+    "            temp = head \n",
+    "            while(temp.next!=None):\n",
+    "                temp = temp.next\n",
+    "            temp.next = nNode\n",
+    "        val = int(input())\n",
+    "    return head\n",
+    "\n",
+    "newHead = take_ip()\n",
+    "#pLL(newHead)\n",
+    "headAns = insert_at_head(1000,newHead)\n",
+    "#pLL(ans)\n",
+    "tailAns = insert_at_tail(100000,headAns)\n",
+    "pLL(tailAns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Insert at tail -- recursive call\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "\n",
+    "def insert_at_tail_recursive(head, data):\n",
+    "    tailNode = Node(data)\n",
+    "    if head==None:\n",
+    "        return tailNode\n",
+    "    head.next = insert_at_tail_recursive(head.next,data)\n",
+    "    return head\n",
+    "\n",
+    "insert_at_tail_recursive(head,100)"
+   ]
   }
  ],
  "metadata": {
