--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -779,11 +779,9 @@
    "source": [
     "## Pow(x,N)\n",
     "\n",
-    "import math\n",
-    "\n",
-    "ans = math.pow(2.10000,3)\n",
-    "a = f\"{ans:.5f}\"\n",
-    "print(doubleint(a))"
+    "class Solution:\n",
+    "    def myPow(self, x: float, n: int) -> float:\n",
+    "        return x**n"
    ]
   },
   {
@@ -984,6 +982,122 @@
     "s = Solution()\n",
     "print(s.search([4, 5, 6, 7, 0, 1, 2], 0))  # Output: 4\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Exceeds the limit (4300 digits) for integer string conversion; use sys.set_int_max_str_digits() to increase the limit",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 25\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28mprint\u001b[39m(fact)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;124;03m    lst = list(str(fact))\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;124;03m    count = 0\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;124;03m            return count\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;124;03m    '''\u001b[39;00m\n\u001b[1;32m---> 25\u001b[0m \u001b[43mtrailingzeroes\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1574\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[28], line 13\u001b[0m, in \u001b[0;36mtrailingzeroes\u001b[1;34m(n)\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtrailingzeroes\u001b[39m(n):\n\u001b[0;32m     12\u001b[0m     fact \u001b[38;5;241m=\u001b[39m factorial(n)\n\u001b[1;32m---> 13\u001b[0m     \u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfact\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;124;03m    lst = list(str(fact))\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;124;03m    count = 0\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;124;03m            return count\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;124;03m    '''\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: Exceeds the limit (4300 digits) for integer string conversion; use sys.set_int_max_str_digits() to increase the limit"
+     ]
+    }
+   ],
+   "source": [
+    "## Factorial Trailing Zeroes\n",
+    "def factorial(n):\n",
+    "    if n==0:\n",
+    "        return 0\n",
+    "    elif n==1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n*factorial(n-1)\n",
+    "\n",
+    "def trailingzeroes(n):\n",
+    "\n",
+    "    fact = factorial(n)\n",
+    "    print(fact)\n",
+    "    '''\n",
+    "    lst = list(str(fact))\n",
+    "    count = 0\n",
+    "    for i in range(len(lst)-1,-1,-1):\n",
+    "        if lst[i]=='0':\n",
+    "            count = count+1\n",
+    "        else:\n",
+    "            return count\n",
+    "    '''\n",
+    "    \n",
+    "    \n",
+    "trailingzeroes(1574)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m## Reverse bits\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m n \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mint32(\u001b[38;5;241m0b00000010100101000001111010011100\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
+   "source": [
+    "## Reverse bits\n",
+    "import numpy as np\n",
+    "n = np.int32(0b00000010100101000001111010011100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7//5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1//5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
