--- a/leetcodetop150questions.ipynb
+++ b/leetcodetop150questions.ipynb
@@ -1097,7 +1097,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Word pattern\n",
+    "\n",
+    "class Solution:\n",
+    "    def wordPattern(self, pattern: str, s: str) -> bool:\n",
+    "        l1=set(pattern)\n",
+    "        l2=set(str.split(s,\" \"))\n",
+    "        if len(l1)==len(l2):\n",
+    "            return True\n",
+    "        return False"
+   ]
   }
  ],
  "metadata": {
