--- a/linkedlist.ipynb
+++ b/linkedlist.ipynb
@@ -379,6 +379,32 @@
     "\n",
     "insert_at_tail_recursive(head,100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Insert at Tail -- Recursively\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "\n",
+    "    def insert_at_tail(self, head: Node, data: int) -> Node:\n",
+    "       tailNode = Node(data)\n",
+    "       if head==None:\n",
+    "           return tailNode\n",
+    "       head.next = self.insert_at_tail(head.next,data)\n",
+    "       return head"
+   ]
   }
  ],
  "metadata": {
